<?xml version="1.0"?>
<package format="2">
  <name>ros_fsm</name>
  <version>0.0.1</version>
  <description>The ros_fsm package</description>

  <maintainer email="lucafortini60@gmail.com">luca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
